--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,7 @@ body{background-color: #A0A48A;}
 .header{
   font-size: 40px;
   text-align:center;
+  text-shadow: 2px  2px 2px var(dark-color);
 }
 
 .header img{
