--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,27 +5,34 @@
 h1{color:var(--dark)}
 h1{font-family: 'Lobster', cursive;}
 p{font-family: 'Arvo', serif;}
-p{color:darkslategray;}
+p{color:var(--dark-color);}
 h1{font-size: 70px;}
 body{background-color: #A0A48A;}
+h2{color:var(--beige-color);
+h2{font-family: 'Arvo', serif;}
+h2{font-style: italic ;}
+h2{font-weight: bold;}
+h2{font-size: 30px;}
 
+body:{background-color:var(--oscuro-color)}
 :root{
-  beige-color#EBE3A3;
-  dark-color: #ffffff;
-  white-color:#999999;
-  gray-color: rgb(204,212,222);
-  blue-color:#90E7FC;
+  --beige-color#EBE3A3;
+  --dark-color: #ffffff;
+  --white-color:#999999;
+  --gray-color: rgb(204,212,222);a
+  --blue-color:#90E7FC;
 }
 .header{
   font-size: 40px;
   text-align:center;
   text-shadow: 2px  2px 2px var(dark-color);
+  background-image: url(../img/personajes Johnny Deep.png);
 }
 
 .header img{
   max-width: 100%;
-  
 }
+
 .inicio {
     width: 800px;
     height: auto;
@@ -41,11 +48,8 @@ body{background-color: #A0A48A;}
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-
-
-
-    
 }
+
 .inicio img {
    margin-left: 30px;
     margin-right: 30px;
@@ -54,7 +58,6 @@ body{background-color: #A0A48A;}
     border-radius: 60px;
     border: 5px inset #4A5D5B;
     box-shadow: 3px 3px 6px #4A5D5B;
-
 }
 
 .inicio h1 {
@@ -63,5 +66,45 @@ body{background-color: #A0A48A;}
     margin:0px;
     text-shadow:3px 3px 5px #8EEBE3;
 }
+
+.nav{
+  background-color: ;
+}
+.nav1{
+  display: flex;
+  justify-content: flex-start;
+}
+
+.search{
+  display: flex;
+  justify-content: flex-end;
+}
+.lista{
+  text-align: center;
+}
+
+.table{
+  width: 700px;
+  border: 3px ridge var(--blue-color) ;
+  background-color:var(--gray-color) ;
+}
+ .table th{
+   height: 70px;
+   background-color: var(--beige-color);
+ }
+ .form{
+   box-shadow:1px 1px 2px var(--dark-color);
+   border-radius: 20px;
+ }
+  .table img{
+    width: 130 px;
+    border-radius: 40% ;
+    border: 2px solid var(--dark-color) ;
+  }
+  
+  .banner img{
+    width: 200px auto;
+    
+  }
 
 
