--- a/css/estilos.css
+++ b/css/estilos.css
@@ -104,7 +104,8 @@ body:{background-color:var(--oscuro-color)}
   
   .banner img{
     width: 200px auto;
-    
+    border-radius: 30%;
+    box-shadow: 2px 2px 2px var(--gray-color);
   }
 
 
