--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,106 +6,65 @@ h1{color:var(--dark)}
 h1{font-family: 'Lobster', cursive;}
 p{font-family: 'Arvo', serif;}
 p{color:var(--dark-color);}
-h1{font-size: 70px;}
-body{background-color: #A0A48A;}
-h2{color:var(--beige-color);
+h1{font-size: 120px;}
+h2{color:var(--beige-color)}
 h2{font-family: 'Arvo', serif;}
 h2{font-style: italic ;}
 h2{font-weight: bold;}
 h2{font-size: 30px;}
 
-body:{background-color:var(--oscuro-color)}
+
 :root{
-  --beige-color#EBE3A3;
-  --dark-color: #ffffff;
-  --white-color:#999999;
-  --gray-color: rgb(204,212,222);a
-  --blue-color:#90E7FC;
+  --beige-color: #EBE3A3;
+  --dark-color: #070707;
+  --white-color:#faf8f8;
+  --gray-color: rgb(204,212,222);
+  --blue-color: #90E7FC;
+  --oscuro-color: #082032;
+  --fondo-color: #A0A48A;
 }
+
 .header{
-  font-size: 40px;
-  text-align:center;
-  text-shadow: 2px  2px 2px var(dark-color);
-  background-image: url(../img/personajes Johnny Deep.png);
+  background-image: url(../img/Personajes2.jpg);
+  height: 12rem;
+  width: 100%;
+  text-align: center;
+  
 }
 
-.header img{
-  max-width: 100%;
+.header h1{
+  color: var(--oscuro-color);
+  text-shadow: 2px 2px 2px var(--dark-color);
+  border: var(--white-color);
+  margin: 0px auto;
 }
 
-.inicio {
-    width: 800px;
-    height: auto;
-    background:linear-gradient(#72B498, #CFEBDF);
-    border-color: #D6DEAF;
-    border-style: double;
-    padding-right: 30px;
-    margin: auto;
-    margin-top: 80px;
-    border-top-right-radius: 70px;
-    border-bottom-left-radius: 70px;
-    display:flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+.title{
+  background-color: rgba(204,212,222,0.6);
+  width: 100%;
+  height: 12rem;
 }
-
-.inicio img {
-   margin-left: 30px;
-    margin-right: 30px;
-    width: 170px;
-    height: auto;
-    border-radius: 60px;
-    border: 5px inset #4A5D5B;
-    box-shadow: 3px 3px 6px #4A5D5B;
-}
-
-.inicio h1 {
-    color: aliceblue;
-    text-align: center;
-    margin:0px;
-    text-shadow:3px 3px 5px #8EEBE3;
-}
-
 .nav{
-  background-color: ;
+ 
+  background-color: var(--oscuro-color);
+  height: 40px;
+  width: 100%;
 }
 .nav1{
   display: flex;
-  justify-content: flex-start;
-}
-
-.search{
-  display: flex;
-  justify-content: flex-end;
-}
-.lista{
-  text-align: center;
-}
-
-.table{
-  width: 700px;
-  border: 3px ridge var(--blue-color) ;
-  background-color:var(--gray-color) ;
-}
- .table th{
-   height: 70px;
-   background-color: var(--beige-color);
- }
- .form{
-   box-shadow:1px 1px 2px var(--dark-color);
-   border-radius: 20px;
- }
-  .table img{
-    width: 130 px;
-    border-radius: 40% ;
-    border: 2px solid var(--dark-color) ;
-  }
+  justify-content: space-around;
   
-  .banner img{
-    width: 200px auto;
-    border-radius: 30%;
-    box-shadow: 2px 2px 2px var(--gray-color);
-  }
+}
+.nav1 a{
+  color: var(--white-color);
+  text-decoration: none;
+  display: flex;
+  margin-top: 0.5rem;
+}
 
-
+.item:hover{
+  color: rgba(255,255,255, 0.4);
+  border-bottom: 2px solid var(--gray-color);
+  transform: scale(1.1);
+  transition: transform ;
+}
