--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,7 @@ h1{color:var(--dark)}
 h1{font-family: 'Lobster', cursive;}
 p{font-family: 'Arvo', serif;}
 p{color:var(--dark-color);}
+p{font-size: 16px;}
 h1{font-size: 120px;}
 h2{color:var(--oscuro-color)}
 h2{font-family: 'Arvo', serif;}
@@ -25,22 +26,25 @@ body{background-color: var(--beige-color);}
   --fondo-color: #A0A48A;
   --azuloscuro-color: #3D425F; 
 }
+
 .header{
+  
   background-image: url(../img/Personajes2.jpg);
   height: 12rem;
-  width: 100%;
   text-align: center;
+  
 }
 .header h1{
+  
   color: var(--oscuro-color);
   text-shadow: 2px 2px 2px var(--dark-color);
   border: var(--white-color);
   margin: 0px auto;
+  font-size: 5rem;
 }
 .title{
   background-color: rgba(204,212,222,0.6);
-  width: 100%;
-  height: 12rem;
+  height: 13rem;
 }
 .nav{
  
@@ -57,6 +61,7 @@ body{background-color: var(--beige-color);}
   text-decoration: none;
   display: flex;
   margin-top: 0.5rem;
+  font-size: 14px;
 }
 .item:hover{
   color: rgba(255,255,255, 0.4);
@@ -71,21 +76,31 @@ body{background-color: var(--beige-color);}
 }
 .titulo2{
   text-align: center;
+  font-size: 28px;
   color: var(--azuloscuro-color);
   text-shadow: 2px 2px 2px var(--gray-color);
 }
 #biografia{
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 #biografia img{
   border-radius: 50%;
   border: 2px solid var(--azuloscuro-color);
   box-shadow: 1px 1px 2px var(--oscuro-color);
   margin: 1rem;
-  width: 300px ;
+  width: 280px;
   height: 300px;
+  animation: zoomrotate 2s 2;
 }
+@keyframes zoomrotate{
+    20%{transform: rotate(-6deg); transform: scale(0.7);}
+    30%, 70%{ transform: scale(1.1); transform: rotate(6deg);}
+    50%, 90%{ transform: scale(1.1); transform: rotate(-6deg);}
+}
+
 .biografia{
   display: flex;
   flex-direction: column;
@@ -115,16 +130,17 @@ width: 100%;
   margin: 0px auto;
 }
 #quien-es{
-  width: 80rem;
+  width: 80vh;
   display: flex;
-  margin: 0px auto;
+  flex-direction: column;
+  margin: 0px auto 10px auto;
   border: 2px groove var(--azuloscuro-color);
   background:linear-gradient(#79AFAD,#B8DCDA); 
   border-radius: 80px 0 80px 0;
   box-shadow: 2px 2px 6px var(--dark-color);
 }
 .seccion{
-  margin: 1.5rem;
+  margin: 12px;
   display: flex;
   align-items: center;
   flex-basis: 45%;
@@ -134,8 +150,9 @@ width: 100%;
   border: 2px solid var(--azuloscuro-color);
   box-shadow: -1px -1px 2px var(--oscuro-color);
   margin: 0.2rem;
-  width: 200px ;
-  height: 250px;
+  width: 100px ;
+  height: 150px;
+
 }
 .quien_es{
   display: flex;
@@ -151,11 +168,11 @@ width: 100%;
 .form{
   display: flex;
   margin: 2px auto;
-  height: 80vh;
+  height: 100vh;
   border: 1px 1px 2px var(--oscuro-color);
   background-color: var(--gray-color);
   max-width: 800px;
-  width: 100%;
+  width: 80%;
   box-shadow: 1px 1px 3px var(--dark-color);
   border-radius: 5px;
   padding: 20px;
@@ -203,10 +220,12 @@ width: 100%;
   flex-basis: 50%;
 }
 .btn{
+  margin: 20px 1px;
   display: flex;
-  justify-content: space-around;
-  margin: 10px 1px;
+  flex-direction: row;
+  justify-content: flex-start;
 }
+
 .footer{
   background-color: var(--oscuro-color);
   width: 100%;
@@ -347,3 +366,66 @@ margin: 1rem auto;
   flex-basis: 45%;
 }
 
+@media screen and (min-width:780px) {
+      .header h1{  
+          font-size: 7.5rem;
+        }
+      .nav1 a{
+          font-size: 20px;
+        }
+      #biografia img{
+          border-radius: 50%;
+          border: 2px solid var(--azuloscuro-color);
+          box-shadow: 1px 1px 2px var(--oscuro-color);
+          margin: 1rem;
+          width: 350px;
+          height: 300px;
+      }
+      #quien-es{
+        width: 95%;
+        display: flex;
+        flex-direction: row;
+      }
+      .form{
+        height: 90%;
+      }
+ }
+ @media screen and (min-width:1024px) {
+    
+      .nav1 a{
+        font-size: 22px;
+      }
+      #biografia{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      }
+ }
+ @media screen and (min-width:1200px) {
+  .nav1 a{
+    font-size: 23px;
+  }
+  .titulo2{
+    font-size: 50px;
+  }
+  #biografia p{
+    font-size:18px;
+  }
+  .quien_es p{
+    font-size: 18px;
+  }
+  .quien_es h2{
+    font-size: 30px;
+  }
+  .quien_es li{
+    font-size: 18px;
+  }
+  #quien-es{
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .form{
+    font-size: 18px;
+  }
+}
