--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,7 +31,7 @@ body{background-color: var(--beige-color);
 .header{
   
   background-image: url(../img/Personajes2.jpg);
-  height: 12rem;
+  height: 13rem;
   text-align: center;
   width: 100%;
 }
@@ -48,19 +48,19 @@ body{background-color: var(--beige-color);
   height: 13rem;
 }
 nav{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   background-color: var(--oscuro-color);
   width: 100%;
+  padding: 0.5rem 0rem 0.5rem 0rem;
 }
-
+.nav1{
+  display: flex;
+  flex-direction: column;
+}
 .nav1 a{
   color: var(--white-color);
   text-decoration: none;
-  display: flex;
-  margin: 0.5rem 0.5rem;
   font-size: 14px;
+  margin: 0 0.5rem;
 }
 .item:hover{
   color: rgba(255,255,255, 0.4);
@@ -105,6 +105,7 @@ nav{
   flex-direction: column;
   margin: 2rem;
   text-align: justify;
+
 }
 .carrera{
 display: flex;
@@ -128,7 +129,7 @@ width: 100%;
   margin: 0px auto;
 }
 #quien-es{
-  width: 85%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   margin: 0px auto 10px auto;
@@ -142,7 +143,7 @@ width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-basis: 40%;
+
 }
 .seccion img{
   border-radius: 30%;
@@ -226,7 +227,7 @@ width: 100%;
   justify-content: flex-start;
 }
 
-.footer{
+footer{
   background-color: var(--oscuro-color);
   width: 100%;
   height: 100%;
@@ -370,9 +371,16 @@ margin: 1rem auto;
       .header h1{  
           font-size: 7.5rem;
         }
+      .nav1{
+        flex-direction: row;
+        justify-content: space-around;
+      }
       .nav1 a{
           font-size: 20px;
         }
+      .busqueda{
+        justify-content: flex-end;
+      }
       #biografia img{
           border-radius: 50%;
           border: 2px solid var(--azuloscuro-color);
@@ -381,6 +389,9 @@ margin: 1rem auto;
           width: 350px;
           height: 300px;
       }
+      .seccion{
+        flex-basis: 45%;}
+
       #quien-es{
         width: 95%;
         display: flex;
@@ -391,22 +402,13 @@ margin: 1rem auto;
         flex-direction: row;
         height: 90%;
       }
-      .foot{
+      .box-footer{
         display: flex;
-        flex-direction: column;
-        font-size: 12px;
-        color: var(--beige-color);
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
       }
-      .foot i{
-        color: var(--beige-color);
-        margin: 2px 3px;
-      }
-      .foot a{
-        font-size: 10px;
-        color: var(--beige-color);
-        text-decoration: none;
-        margin: 3px 12px;
-      }
+
  }
  @media screen and (min-width:1024px) {
     
@@ -419,6 +421,7 @@ margin: 1rem auto;
         justify-content: center;
         align-items: center;
       }
+
  }
  @media screen and (min-width:1200px) {
   .nav1 a{
@@ -428,22 +431,25 @@ margin: 1rem auto;
     font-size: 50px;
   }
   #biografia p{
-    font-size:18px;
+    font-size:20px;
   }
   .quien_es p{
-    font-size: 18px;
+    font-size: 20px;
+  }
+  .seccion img{
+    width: 180px ;
   }
   .quien_es h2{
-    font-size: 30px;
+    font-size: 32px;
   }
   .quien_es li{
-    font-size: 18px;
+    font-size: 20px;
   }
   #quien-es{
     align-items: flex-start;
     justify-content: center;
   }
   .form{
-    font-size: 18px;
+    font-size: 20px;
   }
 }
