--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,7 +29,6 @@ body{background-color: var(--beige-color);
 }
 
 .header{
-  
   background-image: url(../img/Personajes2.jpg);
   height: 13rem;
   text-align: center;
@@ -51,6 +50,7 @@ nav{
   background-color: var(--oscuro-color);
   width: 100%;
   padding: 0.5rem 0rem 0.5rem 0rem;
+  grid-area: nav;
 }
 .nav1{
   display: flex;
@@ -99,7 +99,6 @@ nav{
     30%, 70%{ transform: scale(1.1); transform: rotate(6deg);}
     50%, 90%{ transform: scale(1.1); transform: rotate(-6deg);}
 }
-
 .biografia{
   display: flex;
   flex-direction: column;
@@ -116,18 +115,6 @@ width: 100%;
   height: 250px;
 }
 
-.peliculas{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.peli{
-  flex-basis: 45%;
-}
-.peli2{
-  width: 1200px;
-  margin: 0px auto;
-}
 #quien-es{
   width: 90%;
   display: flex;
@@ -252,67 +239,7 @@ footer{
   text-decoration: none;
   margin: 3px 12px;
 }
-.table{
-max-width: 480px;
-max-height: 900px;
-width: 100%;
-background-color: var(--gray-color);
-margin: 1rem auto;
-}
-.table th{
-  background-color: var(--blue-color);
-  font-size: 20px;
-  text-shadow: 1px 1px 2px var(--oscuro-color);
-}
-.table img{
-  width: 100px;
-  height: 100px;
-  margin: 2rem ;
-  border-radius: 50%;
-}
-.table td{
-    color: var(--dark-color);
-    margin: 2rem;
-    text-align: center;
-}
-.table tr{
-  height: 3rem;
-}
 
-/*formulario peliculas*/
-
-.titulo23{
-  display: flex;
-}
-.formpel{
-  display: flex;
-  justify-content: flex-start;
-  margin: 2px 80px;
-  height: 80vh;
-  border: 1px 1px 2px var(--oscuro-color);
-  background-color: var(--gray-color);
-  max-width: 700px;
-  width: 100%;
-  box-shadow: 1px 1px 3px var(--dark-color);
-  border-radius: 5px;
-  padding: 2px;
-}
-.form-group{
-    display: flex;
-    flex-direction: column;
-    margin: 0px;
-}
-.form-label{
-  font-weight: bold;
-  margin: 10px 0px;
- 
-}
-.form-input{
-  border: 3px solid var(--gray-color);
-  padding: 0.1rem;
-  outline: none;
-  box-shadow: 1px 1px 2px var(--azuloscuro-color);
-}
 .btn-azul{
   padding: 0.5rem;
   margin: 0px 0.5rem;
