--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,6 +34,10 @@ body{background-color: var(--beige-color);
   text-align: center;
   width: 100%;
 }
+.timg{
+  display: flex;
+  flex-direction: column;}
+  
 .header h1{
   
   color: var(--oscuro-color);
